# openx

./: AGENTS.md  PNPM.md  README.md  package.json
codex-cli/: README.md
docs/: advanced.md  authentication.md  config.md  contributing.md  experimental.md  getting-started.md  install.md  open-source-fund.md  prompts.md  release_management.md  sandbox.md  zdr.md
openx-cli/: README.md  package.json
openx-cli/scripts/: README.md
openx-rs/: README.md  justfile
openx-rs/ansi-escape/: Cargo.toml
openx-rs/apply-patch/: Cargo.toml
openx-rs/apply-patch/src/: main.rs
openx-rs/arg0/: Cargo.toml
openx-rs/arg0/src/: lib.rs
openx-rs/chatgpt/: Cargo.toml
openx-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
openx-rs/chatgpt/tests/suite/: apply_command_e2e.rs
openx-rs/cli/: Cargo.toml
openx-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  proto.rs
openx-rs/common/: Cargo.toml
openx-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
openx-rs/core/: Cargo.toml
openx-rs/core/src/: apply_patch.rs  auth.rs  chat_completions.rs  client.rs  client_common.rs  config.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  flags.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  openai_tools.rs  openx.rs  openx_conversation.rs  parse_command.rs  plan_tool.rs  project_doc.rs  safety.rs  shell.rs  spawn.rs  token_data.rs  user_instructions.rs
openx-rs/core/src/exec_command/: session_manager.rs
openx-rs/core/src/rollout/: list.rs  policy.rs  recorder.rs
openx-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs
openx-rs/core/tests/common/: Cargo.toml  lib.rs
openx-rs/core/tests/suite/: cli_stream.rs  client.rs  compact.rs  exec.rs  exec_stream_events.rs  fork_conversation.rs  live_cli.rs  prompt_caching.rs  seatbelt.rs  stream_error_allows_next_turn.rs  stream_no_completed.rs
openx-rs/exec/: Cargo.toml
openx-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  lib.rs  main.rs
openx-rs/exec/tests/suite/: apply_patch.rs  common.rs  sandbox.rs
openx-rs/execpolicy/: Cargo.toml
openx-rs/execpolicy/src/: main.rs
openx-rs/execpolicy/tests/suite/: bad.rs  cp.rs  good.rs  head.rs  literal.rs  ls.rs  parse_sed_command.rs  pwd.rs  sed.rs
openx-rs/file-search/: Cargo.toml
openx-rs/file-search/src/: main.rs
openx-rs/linux-sandbox/: Cargo.toml
openx-rs/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs  main.rs
openx-rs/linux-sandbox/tests/suite/: landlock.rs
openx-rs/login/: Cargo.toml
openx-rs/login/src/: lib.rs  server.rs
openx-rs/mcp-client/: Cargo.toml
openx-rs/mcp-client/src/: main.rs  mcp_client.rs
openx-rs/mcp-server/: Cargo.toml
openx-rs/mcp-server/src/: exec_approval.rs  lib.rs  main.rs  message_processor.rs  openx_message_processor.rs  openx_tool_config.rs  openx_tool_runner.rs  outgoing_message.rs  patch_approval.rs
openx-rs/ollama/: Cargo.toml
openx-rs/ollama/src/: client.rs  lib.rs
openx-rs/protocol/: Cargo.toml
openx-rs/protocol-ts/: Cargo.toml
openx-rs/protocol-ts/src/: lib.rs  main.rs
openx-rs/protocol/src/: mcp_protocol.rs  models.rs  plan_tool.rs  protocol.rs
openx-rs/tui/: Cargo.toml
openx-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  citation_regex.rs  cli.rs  clipboard_paste.rs  diff_render.rs  file_search.rs  get_git_diff.rs  history_cell.rs  lib.rs  main.rs  markdown.rs  markdown_stream.rs  resume_picker.rs  session_log.rs  slash_command.rs  status_indicator_widget.rs  updates.rs  user_approval_widget.rs  version.rs
(+33 files in other folders)
