[package]
edition = "2024"
name = "openx-arg0"
version = { workspace = true }

[lib]
name = "openx_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
openx-apply-patch = { path = "../apply-patch" }
openx-core = { path = "../core" }
openx-linux-sandbox = { path = "../linux-sandbox" }
dotenvy = "0.15.7"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
