[package]
edition = "2024"
name = "openx-linux-sandbox"
version = { workspace = true }

[[bin]]
name = "openx-linux-sandbox"
path = "src/main.rs"

[lib]
name = "openx_linux_sandbox"
path = "src/lib.rs"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
openx-common = { path = "../common", features = ["cli"] }
openx-core = { path = "../core" }
landlock = "0.4.1"
libc = "0.2.175"
seccompiler = "0.5.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
